fix: removed padding-right + decreased image size in Services module + align text on left in last posts module

--- a/src/components/Landing/Clients/Clients.module.scss
+++ b/src/components/Landing/Clients/Clients.module.scss
@@ -7,6 +7,7 @@
   margin-top: 2em;
   padding-bottom: 1em;
   border-bottom: solid 1px $color-gray-border;
+  text-align: center;
 
   .logos {
     display: grid;
