--- a/src/components/Landing/HeroModule/HeroModule.module.scss
+++ b/src/components/Landing/HeroModule/HeroModule.module.scss
@@ -15,6 +15,8 @@
   margin: 25px 0px 0px 0px;
   font-size: 63px;
   width: 100%;
+  padding-top:0.7em;
+  padding-bottom:0.4em;
   text-align: center;
 }
 .hero__module__image {
