--- a/src/components/Landing/Services/Services.module.scss
+++ b/src/components/Landing/Services/Services.module.scss
@@ -4,6 +4,7 @@
 .container_serv{
     margin-top: 5em;
     border-bottom: solid 1px $color-gray-border;
+    text-align: center;
 
     h1 {
       text-align: center;
@@ -17,7 +18,7 @@
 }
 .service_container {
   display: grid;
-  grid-template-columns: 60% 30%;
+  grid-template-columns: 40% 50%;
   grid-gap: 10%;
   width: 100%;
   padding-bottom: 5em;
@@ -27,6 +28,8 @@
 }
 .service_container_image {
   object-fit: contain;
+  width: 80%;
+  margin: auto;
 }
 
 .service_container_content {
@@ -35,11 +38,13 @@
   justify-content: center;
   align-items: flex-start !important;
   direction: ltr;
-
 }
 @media (max-width: 725px) {
-    .service_container {
-        display: grid;
-        grid-template-columns: 100%;
-      }
+  .service_container {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+  .service_container_image {
+    margin-top:2em;
+  }
 }
